# many-fuzzy

./: Cargo.toml  README.md  rust-toolchain.toml
many-fuzzy/: Cargo.toml
many-fuzzy/src/: fuzz.rs  main.rs  parsers.rs  stats.rs
many-fuzzy/src/fuzz/: generators.rs
