[package]
name = "many-fuzzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cbor-diag = "0.1.11"
coset = "0.3.2"
clap = { version = "3.2.22", features = [ "derive" ] }
hdrhistogram = "7.5.0"
hex = "0.4.3"
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699", features = ["ecdsa", "ed25519"] }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
peg = "=0.8.0" # peg = "0.8.1" fails to compile Box<impl FuzzGenerator>
               # https://github.com/kevinmehall/rust-peg/issues/319
proptest = "1.0.0"
rand = { version = "0.8.5", features = [ "std_rng" ] }
rand_distr = "0.4.3"
regex = "1.5.5"
reqwest = "0.11.10"
tracing = "0.1.29"
tracing-subscriber = "0.3.15"
tracing-timing = "0.6.0"
tokio = { version = "1.12.0", features = [ "full" ] }
tokio-retry = "0.3.0"
url = "2.2.2"
